--- a/config/content.htm
+++ b/config/content.htm
@@ -701,11 +701,13 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <h2>w16</h2>
-<div class="winkVideoPlayOverlayClass"><span>線上課程影片:</span></div>
-<div class="winkVideoPlayOverlayClass">
-<p><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EbAlwOD__R9Etqr8HHE4xz4BkPF3ZxHs--_OR8b0vMBRVQ">cd2022_w16_2b_part1.mp4</a><span> </span>(以下範例的 demo 說明)</p>
-<p><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/ET5nXVwHyCFJmv0J4mQNteIBUZ1iRWW-yJNCgLaMesskZQ?e=oGZDrx">cd2022_w16_2b_part2.mp4</a><span> </span>(rotating cuboid 與 vision sensor 在 remote API 與網際介面環境下的應用)</p>
-<p><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EdxLGcSqPupOqk-re8LdhkEB-XhuhV6zsiZdOMi8sYT9MA?e=Cbyi0a">cd2022_w16_2b_part3.mp4</a><span> </span>(說明 CoppeliaSim 4.3.0 visualization stream 功能應用)</p>
+<p>線上課程影片:</p>
+<p></p>
+<p><a href="/get_page/w16/cd2022_w16_2b_part1.mp4">cd2022_w16_2b_part1.mp4</a> (以下範例的 demo 說明)</p>
+<p><a href="/get_page/w16/cd2022_w16_2b_part2.mp4">cd2022_w16_2b_part2.mp4 </a>(rotating cuboid 與 vision sensor 在 remote API 與網際介面環境下的應用)</p>
+<p><a href="/get_page/w16/cd2022_w16_2b_part3.mp4">cd2022_w16_2b_part3.mp4</a> (說明 CoppeliaSim 4.3.0 visualization stream 功能應用)</p>
+<div class="winkVideoPlayOverlayClass"><span></span></div>
+<div class="winkVideoPlayOverlayClass"></div>
 <h3>Visualization Stream</h3>
 <ol>
 <li>在 uArm 場景伺服器端, 解開壓縮檔案後, 以 CoppeliaSim 4.3.0 rev3 開啟 uarm_nx_tkinter_gui_control.ttt 或 uarm_nx_tkinter_gui_control_exhaustive.simscene.xml.</li>
@@ -731,8 +733,54 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
+<h3>online test</h3>
+<p>1.已知左側綠色底座的 uArm 機械手臂, 其基座座標原點位於絕對座標 (1.0, 0.25, 0), 啟動模擬後 green_suctionpad_frame 座標原點則位於 (0.22859, 0.26047, 0.36576), 請列出運算式說明, 啟動模擬後 joint1, joint2 與 joint3 分別以逆時針旋轉 5 度後, 求 green_suctionpad_frame 的絕對座標值.</p>
+<div class="winkVideoControlBarProgressThumbClass">
+<p>Ans:(x:+1.000 y:+0.2500 z:+0.1795)</p>
+</div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
+      <source src="/downloads/online-1.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+</div>
+</div>
+<p>-------------------------------------</p>
+<p>2.已知左側 uarm 前方的紅色方塊頂端中心座標值為 (0.2, 0.4, 0.1), 請列出運算式說明左側 uarm 機械手臂的 joint1, joint2 與 joint3 該如何旋轉才能讓 end effector 的吸盤末端中心點移動至紅色方塊頂端中心?</p>
+<p>Ans:(a:-000.01 b:-000.047 g:-000.0060)</p>
+<p></p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
+      <source src="/downloads/online-2.mp4" type="video/mp4"/>
+</video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div></div></div></div>
+</div></div></div></div></div>
