--- a/content/w16.html
+++ b/content/w16.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='w10_nx_integ.html'>w10_nx_integ</a><li><a href='w10_ssh.html'>w10_ssh</a></li></ul><li><a href='w12.html'>w12</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li class='has-children'><a href='w16.html'>w16</a><ul class='dropdown'><li><a href='Visualization Stream.html'>Visualization Stream</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='w10_nx_integ.html'>w10_nx_integ</a><li><a href='w10_ssh.html'>w10_ssh</a></li></ul><li><a href='w12.html'>w12</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li class='has-children'><a href='w16.html'>w16</a><ul class='dropdown'><li><a href='Visualization Stream.html'>Visualization Stream</a><li><a href='online test.html'>online test</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,11 +140,13 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='Visualization Stream.html'>Next</a> >> Visualization Stream<br /><h1>w16</h1>
-<div class="winkVideoPlayOverlayClass"><span>線上課程影片:</span></div>
-<div class="winkVideoPlayOverlayClass">
-<p><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EbAlwOD__R9Etqr8HHE4xz4BkPF3ZxHs--_OR8b0vMBRVQ">cd2022_w16_2b_part1.mp4</a><span> </span>(以下範例的 demo 說明)</p>
-<p><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/ET5nXVwHyCFJmv0J4mQNteIBUZ1iRWW-yJNCgLaMesskZQ?e=oGZDrx">cd2022_w16_2b_part2.mp4</a><span> </span>(rotating cuboid 與 vision sensor 在 remote API 與網際介面環境下的應用)</p>
-<p><a href="https://gmnfuedutw-my.sharepoint.com/:v:/g/personal/yen_gm_nfu_edu_tw/EdxLGcSqPupOqk-re8LdhkEB-XhuhV6zsiZdOMi8sYT9MA?e=Cbyi0a">cd2022_w16_2b_part3.mp4</a><span> </span>(說明 CoppeliaSim 4.3.0 visualization stream 功能應用)</p>
+<p>線上課程影片:</p>
+<p></p>
+<p><a href="/get_page/w16/cd2022_w16_2b_part1.mp4">cd2022_w16_2b_part1.mp4</a> (以下範例的 demo 說明)</p>
+<p><a href="/get_page/w16/cd2022_w16_2b_part2.mp4">cd2022_w16_2b_part2.mp4 </a>(rotating cuboid 與 vision sensor 在 remote API 與網際介面環境下的應用)</p>
+<p><a href="/get_page/w16/cd2022_w16_2b_part3.mp4">cd2022_w16_2b_part3.mp4</a> (說明 CoppeliaSim 4.3.0 visualization stream 功能應用)</p>
+<div class="winkVideoPlayOverlayClass"><span></span></div>
+<div class="winkVideoPlayOverlayClass"></div>
 <br />w14 << <a href='w14.html'>Previous</a> <a href='Visualization Stream.html'>Next</a> >> Visualization Stream</div>
         
     <!-- footer -->
