--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -758,7 +758,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
-<h3>online test</h3>
+</div>
+</div><h3>online test</h3>
 <p>1.已知左側綠色底座的 uArm 機械手臂, 其基座座標原點位於絕對座標 (1.0, 0.25, 0), 啟動模擬後 green_suctionpad_frame 座標原點則位於 (0.22859, 0.26047, 0.36576), 請列出運算式說明, 啟動模擬後 joint1, joint2 與 joint3 分別以逆時針旋轉 5 度後, 求 green_suctionpad_frame 的絕對座標值.</p>
 <div class="winkVideoControlBarProgressThumbClass">
 <p>Ans:(x:+1.000 y:+0.2500 z:+0.1795)</p>
@@ -807,8 +808,6 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-</div>
 </div>
 </div>
 </div>
