--- a/content/Visualization Stream.html
+++ b/content/Visualization Stream.html
@@ -164,7 +164,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
-<br />w16 << <a href='w16.html'>Previous</a> <a href='online test.html'>Next</a> >> online test</div>
+</div>
+</div><br />w16 << <a href='w16.html'>Previous</a> <a href='online test.html'>Next</a> >> online test</div>
         
     <!-- footer -->
       <div class="container">
