--- a/content/online test.html
+++ b/content/online test.html
@@ -188,11 +188,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-</div>
-</div>
-</div>
-</div><br />Visualization Stream << <a href='Visualization Stream.html'>Previous</a> </div>
+</div></div></div><br />Visualization Stream << <a href='Visualization Stream.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
