--- a/config/content.htm
+++ b/config/content.htm
@@ -453,7 +453,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h1>w7</h1>
+</div>
+<h1>w7</h1>
 <p><span>在系上網段, 可直接從 </span><a href="http://wcm.cycu.org:88/">http://wcm.cycu.org:88</a><span><span> </span>下載.</span><a href="http://wcm.cycu.org:88/compile_copsim_cd2022.7z">compile_copsim_cd2022.7z</a></p>
 <p><span>將自己的倉儲</span><span> <span>git clone --recurse-submodules 倉儲網址</span> 到compile_copsim_cd2022\data\tmp中</span></p>
 <p><span><img alt="" height="630" src="https://40923210.github.io/cd2022/images/%E5%9C%96%E7%89%871.png" width="1008"/></span></p>
@@ -759,7 +760,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 </div>
-</div><h3>online test</h3>
+</div>
+<h3>online test</h3>
 <p>1.已知左側綠色底座的 uArm 機械手臂, 其基座座標原點位於絕對座標 (1.0, 0.25, 0), 啟動模擬後 green_suctionpad_frame 座標原點則位於 (0.22859, 0.26047, 0.36576), 請列出運算式說明, 啟動模擬後 joint1, joint2 與 joint3 分別以逆時針旋轉 5 度後, 求 green_suctionpad_frame 的絕對座標值.</p>
 <div class="winkVideoControlBarProgressThumbClass">
 <p>Ans:(x:+1.000 y:+0.2500 z:+0.1795)</p>
@@ -805,7 +807,29 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<h2>w17</h2>
+<div class="winkVideoPlayOverlayClass"><span>將個人與分組協力完成之 uArm 機械手臂，加上 Suction Pad 執行取放 O X 物件，執行 Tic-Tae-Toe 遊戲場景模擬場景之 NX 零件檔案。</span></div>
+<div class="winkVideoPlayOverlayClass"><span></span></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
+      <source src="/downloads/OOXX.mp4" type="video/mp4"/>
+</video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div></div></div>
+</div></div></div></div></div>
